async-coap-uri/proc-macros/tests/ui/assert_uri_literal/unescaped_ascii_control.stderr
error: unescaped ascii control character
 --> $DIR/unescaped_ascii_control.rs:7:25
  |
7 |     assert_uri_literal!("https://www.example.com/a/\n/c");
  |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
